--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
     <div class="neabip">
       <p>
         O Núcleo de Estudos, Pesquisa e Extensão Afro-brasileiros e Indígenas
-        – NEABI, (instituído no IFNMG campus Januária no ano de 2016) tem por
-        finalidade promover a discussão das relações étnico-raciais na
+        – NEABI, tem como finalidade promover a discussão das relações étnico-raciais na
         sociedade brasileira, de forma a contribuir para a promoção da
         equidade racial, bem como assessorar na inclusão, no currículo oficial
         da rede de ensino, da temática “História e Cultura Afro-Brasileira e
