--- a/index.html
+++ b/index.html
@@ -203,9 +203,38 @@
 
   <div class="citacs pod">PODCAST</div>
   <div class="backlinepodcast"></div>
+  <!-- podcast -->
+
+  <div class="podcast-tittle">
+      <h1>Nos assista no <font color="#ff9700">Batata cast</font> </h1>
+    </div>
   <div class="podpa">
-    <img src="breve.png" alt="em breve nosso podcast">
+    
+    <iframe class="live" width="560" height="315" src="https://www.youtube.com/embed/YIjluesKfzI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+    <iframe id="twitch-chat-embed"
+        src="https://www.twitch.tv/embed/gaules/chat?parent=astonishing-nasturtium-02f7f8.netlify.app"
+        height="0%"
+        width="350px">
+</iframe>
+
+
+
   </div>
+  <div class="livve">
+    <h2>Professor Pedro Paulo - <font color="red">Batata Cast</font> </h2>
+  </div>
+  
+<div class="redesociais">
+  <a href="twitch">
+  <img src="./twitch.png" alt=""></a>
+  <a href="youtube">
+  <img src="./youtube (1).png" alt=""></a>
+  <a href="https://open.spotify.com/show/2nqnlvK6GGsogDn7TCdEZD?si=fM8VrLtOSVaUFl2tz4w3Rw&utm_source=whatsapp">
+  <img src="./spotify (1).png" alt=""></a>
+</div>
+
+  <!-- fim podcast -->
   <div class="espace"></div>
 </section>
 </body>
