--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <iframe class="live" width="560" height="315" src="https://www.youtube.com/embed/YIjluesKfzI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
     <iframe id="twitch-chat-embed"
-        src="https://www.twitch.tv/embed/gaules/chat?parent=astonishing-nasturtium-02f7f8.netlify.app"
+        src="https://www.twitch.tv/embed/gaules/chat?parent=mostracultural.info"
         height="0%"
         width="350px">
 </iframe>
