--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   </div>
   
 <div class="redesociais">
-  <a href="twitch">
+  <a href="https://www.twitch.tv/batata_cast">
   <img src="./twitch.png" alt=""></a>
   <a href="youtube">
   <img src="./youtube (1).png" alt=""></a>
