--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </div>
   <div class="podpa">
     
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/3B1Myw3oFRA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <iframe src="https://www.youtube.com/embed/3B1Myw3oFRA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
     <iframe id="twitch-chat-embed"
         src="https://www.twitch.tv/embed/batata_cast/chat?parent=mostracultural.info"
