--- a/index.html
+++ b/index.html
@@ -209,9 +209,12 @@
       <h1>Nos assista no <font color="#ff9700">Batata cast</font> </h1>
     </div>
   <div class="podpa">
-    
-   <iframe width="680" height="430" src="https://www.youtube.com/embed/3B1Myw3oFRA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    
+    <section class="liveandt">
+   <iframe class="live" src="https://www.youtube.com/embed/3B1Myw3oFRA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="livve">
+  <h2>Professor Pedro Paulo - <font color="red">Batata Cast</font> #3</h2>
+</div>
+  </section>
     <iframe id="twitch-chat-embed"
         src="https://www.twitch.tv/embed/batata_cast/chat?parent=mostracultural.info"
         height="0%"
@@ -221,9 +224,7 @@
 
 
   </div>
-  <div class="livve">
-    <h2>Professor Pedro Paulo - <font color="red">Batata Cast</font> </h2>
-  </div>
+  
   
 <div class="redesociais">
   <a href="https://www.twitch.tv/batata_cast">
