--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
   <h2>Professor Pedro Paulo - <font color="red">Batata Cast</font> #3</h2>
 </div>
   </section>
+  <section class="chat">
     <iframe id="twitch-chat-embed"
         src="https://www.twitch.tv/embed/batata_cast/chat?parent=mostracultural.info"
         height="0%"
@@ -234,7 +235,7 @@
   <a href="https://open.spotify.com/show/2nqnlvK6GGsogDn7TCdEZD?si=fM8VrLtOSVaUFl2tz4w3Rw&utm_source=whatsapp">
   <img src="./spotify (1).png" alt=""></a>
 </div>
-
+</section>
   <!-- fim podcast -->
   <div class="espace"></div>
 </section>
