--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             “Como negra, não quero mais ser objeto de estudo, e sim o sujeito
             da pesquisa.”
           </p>
-          <a href="#">Saiba Mais</a>
+          <a href="https://www.instagram.com/tv/CkOJ-ykrVg-/?igshid=YmMyMTA2M2Y=">Saiba Mais</a>
         </div>
       </div>
       <div class="card">
@@ -103,7 +103,7 @@
             "Eu tenho um sonho. O sonho de ver meus filhos julgados por sua
             personalidade, não pela cor de sua pele."
           </p>
-          <a href="#">Saiba Mais</a>
+          <a href="https://www.instagram.com/tv/CkOJ-ykrVg-/?igshid=YmMyMTA2M2Y=">Saiba Mais</a>
         </div>
       </div>
       <div class="card">
@@ -118,7 +118,7 @@
             "Jogue-me no oceano com meus antepassados que pularam dos navios,
             porque sabiam que a morte era melhor do que a escravidão."
           </p>
-          <a href="#">Saiba Mais</a>
+          <a href="https://www.instagram.com/tv/CkOJ-ykrVg-/?igshid=YmMyMTA2M2Y=">Saiba Mais</a>
         </div>
       </div>
       <div class="card">
@@ -133,7 +133,7 @@
             "Enquanto não houver justiça pra nós, juro que pra vocês não vai
             ter paz." <br><br> "Fogo nos racistas."
           </p>
-          <a href="#">Saiba Mais</a>
+          <a href="https://www.instagram.com/tv/CkOJ-ykrVg-/?igshid=YmMyMTA2M2Y=">Saiba Mais</a>
         </div>
       </div>
     </div>
